--- a/package.json
+++ b/package.json
@@ -11,18 +11,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@types/chai": "^4.1.7",
-    "@types/mocha": "^5.2.7",
-    "@types/supertest": "^2.0.7",
-    "chai": "^4.2.0",
-    "mocha": "^6.1.4",
-    "supertest": "^4.0.2",
-    "ts-node": "^8.2.0",
-    "tslint": "^5.16.0",
-    "typescript": "^3.4.5",
-    "typings": "^2.1.1"
-  },
   "dependencies": {
     "@types/node": "^12.0.3",
     "bcrypt": "^3.0.6",
@@ -34,5 +22,16 @@
     "morgan": "^1.9.1",
     "swagger-ui-express": "^4.0.5",
     "validator": "^11.0.0"
+  },
+  "devDependencies": {
+    "@types/chai": "^4.1.7",
+    "@types/mocha": "^5.2.7",
+    "@types/supertest": "^2.0.7",
+    "chai": "^4.2.0",
+    "mocha": "^6.1.4",
+    "supertest": "^4.0.2",
+    "ts-node": "^8.2.0",
+    "tslint": "^5.16.0",
+    "typescript": "^3.4.5"
   }
 }
